force-app/main/default/objects/Territory_Location__c/Territory_Location__c.object-meta.xml
<CustomObject>
    <description>Defines a specific location within a Territory. Each location must be unique across all Territories of a single Territory Type.</description>
    <label>Territory Location</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Territory Location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>