force-app/main/default/objects/Territory_Location__c/fields/CityCode__c.field-meta.xml
<CustomField>
    <fullName>CityCode__c</fullName>
    <externalId>true</externalId>
    <label>CityCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>