force-app/main/default/objects/Territory_Location__c/fields/CollectionCompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CollectionCompositeKey__c</fullName>
    <description>A composite key used as an index for the location record based on the Territory Map Collection.</description>
    <externalId>true</externalId>
    <inlineHelpText>A composite key used as an index for the location record based on the Territory Map Collection.</inlineHelpText>
    <label>Collection Composite Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>