force-app/main/default/objects/Territory_Location__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <externalId>true</externalId>
    <label>CountryCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>