force-app/main/default/objects/Territory_Location__c/fields/MapCompositeKey__c.field-meta.xml
<CustomField>
    <fullName>MapCompositeKey__c</fullName>
    <description>A composite key used as an index for the location record based on the Territory Map.</description>
    <externalId>true</externalId>
    <inlineHelpText>A composite key used as an index for the location record based on the Territory Map.</inlineHelpText>
    <label>Map Composite Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>