force-app/main/default/objects/Territory_Location__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <externalId>true</externalId>
    <label>PostalCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>