force-app/main/default/objects/Territory_Location__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <externalId>true</externalId>
    <label>StateCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>