force-app/main/default/objects/Territory_Location__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>This location belongs to this territory.</description>
    <inlineHelpText>This location belongs to this territory.</inlineHelpText>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Territory_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>