force-app/main/default/objects/Territory_Location__c/fields/TerritoryMapCollectionId__c.field-meta.xml
<CustomField>
    <fullName>TerritoryMapCollectionId__c</fullName>
    <formula>CASESAFEID(Territory__r.Territory_Map__r.Territory_Map_Collection__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerritoryMapCollectionId</label>
    <type>Text</type>
</CustomField>