force-app/main/default/objects/Territory_Location__c/fields/TerritoryMapId__c.field-meta.xml
<CustomField>
    <fullName>TerritoryMapId__c</fullName>
    <formula>CASESAFEID(Territory__r.Territory_Map__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerritoryMapId</label>
    <type>Text</type>
</CustomField>