force-app/main/default/objects/Territory_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>CityCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>